core/src/snapshots/noobgit_core__ops__tests__snapshot_format__cherry_pick_conflict_blocked_message_shape.snap
---
source: core/src/ops.rs
expression: message
---
コンフリクト（競合）のため取り込めませんでした。状態は元に戻しました。先にいまの変更を整理してから、もう一度お試しください。
