core/src/snapshots/noobgit_core__ops__tests__snapshot_format__commit_info_initial_commit_shape.snap
---
source: core/src/ops.rs
expression: info
---
id: "[id]"
short_id: "[short_id]"
summary: 最初のコミット
author_name: Test User
author_email: test@example.com
time: "[time]"
parent_ids: []
