core/src/snapshots/noobgit_core__ops__tests__snapshot_format__commit_info_with_parent_shape.snap
---
source: core/src/ops.rs
expression: info
---
id: "[id]"
short_id: "[short_id]"
summary: c2
author_name: Test User
author_email: test@example.com
time: "[time]"
parent_ids:
  - "[parent_id]"
