core/src/snapshots/noobgit_core__ops__tests__snapshot_format__squash_commits_preserves_composed_message_format.snap
---
source: core/src/ops.rs
expression: "SquashedMessageShape { summary, full_message }"
---
summary: c2
full_message: "c2\n\nc3"
