core/src/snapshots/noobgit_core__ops__tests__snapshot_format__stash_save_empty_message_auto_name_shape.snap
---
source: core/src/ops.rs
expression: info
---
index: 0
message: "WIP on main: [short_id] c1"
id: "[id]"
file_count: 1
